--- a/addHospital.html
+++ b/addHospital.html
@@ -52,14 +52,14 @@
         <fieldset>
             <div class="form-group">
                 <label for="hospital">Hospital Name</label>
-                <input type="text" class="form-control" id="hospital" placeholder="hospital" name="hospital" size="10" maxlength="10">
+                <input type="text" class="form-control" id="hospital" placeholder="hospital" name="hospital" size="20" maxlength="20">
             </div>
             <div class="form-group">
                 <label for="care">Hospital Care Type</label>
-                <select class="form-control" id="locality" name="locality">
-                    <option value="Hospital">
-                        <option value="Nursing">
-                        <option value="Dispensary">
+                <select class="form-control" id="locality" name="care">
+                  <option value="Hospital">Hospital</option>
+                  <option value="Nursing">Nursing</option>
+                  <option value="Dispensary">Dispensary</option>
                 </select>
             </div>
             <div class="form-group">
@@ -159,23 +159,23 @@
               </div>
             <div class="form-group">
                 <label for="telephone">Telephone</label>
-                <input type="text" class="form-control" id="telephone" placeholder="telephone" name="telephone" size="10" maxlength="10">
+                <input type="text" class="form-control" id="telephone" placeholder="telephone" name="telephone" size="11" maxlength="11">
             </div>
             <div class="form-group">
                 <label for="pincode">Pincode</label>
-                <input type="text" class="form-control" id="pincode" placeholder="pincode" name="pincode" size="10" maxlength="10">
+                <input type="text" class="form-control" id="pincode" placeholder="pincode" name="pincode" size="6" maxlength="6">
             </div>
             <div class="form-group">
                 <label for="address">Address</label>
-                <input type="text" class="form-control" id="address" placeholder="address" name="address" size="10" maxlength="10">
+                <input type="text" class="form-control" id="address" placeholder="address" name="address" size="50" maxlength="50">
             </div>
             <div class="form-group">
                 <label for="district">District</label>
-                <input type="text" class="form-control" id="district" placeholder="district" name="district" size="10" maxlength="10">
+                <input type="text" class="form-control" id="district" placeholder="district" name="district" size="15" maxlength="15">
             </div>
             <div class="form-group">
                 <label for="latitude">Latitude</label>
-                <input type="text" class="form-control" id="mylatitude" placeholder="district" name="district" size="10" maxlength="10">
+                <input type="text" class="form-control" id="mylatitude" placeholder="district" name="latitude" size="10" maxlength="10">
             </div>
             <div class="form-group">
                 <label for="longitude">Longitude</label>
@@ -202,7 +202,6 @@
             console.log("Geolocation is not available");
         }
     </script>
-    <script src="form.js"></script>
 </body>
 
 </html>
