--- a/addHospital.html
+++ b/addHospital.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/simplex/bootstrap.min.css" integrity="sha384-FYrl2Nk72fpV6+l3Bymt1zZhnQFK75ipDqPXK0sOR0f/zeOSZ45/tKlsKucQyjSp" crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="http://cdn.pubnub.com/pubnub-3.7.1.min.js"></script>
+    <!-- <script src="http://cdn.pubnub.com/pubnub-3.7.1.min.js"></script> -->
 </head>
 
 <body>
